--- a/New folder/pr.html
+++ b/New folder/pr.html
@@ -11,8 +11,8 @@
 <body>
     <div class="mainContainer">
         <button class="increment_btn"> Increment</button>
-        <p class="container"> pressed <span class="innerContainer">0</span>  times</p>
-        <p class="secondContainer">triggered  <span class="secondInnerContainer">0</span> times</p>
+        <p class="container"> pressed <span class="pressedClass">0</span>  times</p>
+        <p class="secondContainer">triggered  <span class="triggeredClass">0</span> times</p>
     </div>
     <script src="pr.js"></script>
 </body>
